@@ -351,14 +351,15 @@ let rec has_rtti c =
 let on_generate ctx t =
 	match t with
 	| TClassDecl c ->
+		let meta = ref (c.cl_meta()) in
 		List.iter (fun m ->
 			match m with
-			| ":native",[{ eexpr = TConst (TString name) }] ->
-				(match List.rev (ExtString.String.nsplit name ".") with
-				| [] -> assert false
-				| name :: path -> c.cl_path <- (List.rev path,name))
+			| ":native",[{ eexpr = TConst (TString name) } as e] ->				
+				meta := (":real",[{ e with eexpr = TConst (TString (s_type_path c.cl_path)) }]) :: !meta;
+				c.cl_meta <- (fun() -> !meta);
+				c.cl_path <- s_parse_path name;
 			| _ -> ()
-		) (c.cl_meta());
+		) (!meta);
 		if has_rtti c && not (PMap.mem "__rtti" c.cl_statics) then begin
 			let f = mk_field "__rtti" ctx.api.tstring in
 			let str = Genxml.gen_type_string ctx.com t in
