@@ -3,6 +3,8 @@
 	all : added macros, added --interp
 	all : removed 'here' special identifier
 	neko : fixed neko.Web.getParamsString() returning "null" instead of ""
+	flash9 : fixed issue with @:bind
+	flash9 : added some missing errors
 
 2010-08-14: 2.06
 	neko : change serializer to be able to handle instances of basic classes from other modules
